// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-cMOycp cpoNsI"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-yGKTs enWIIi"
    disabled={false}
    size="small"
  >
    <input
      checked={true}
      className="sc-sQjNv cMpzOu"
      id="test-switch-1"
      onChange={[Function]}
      size="small"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-imZoBe codXWL"
      size="small"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs dRNhSw"
      disabled={false}
      size="medium"
    >
      <input
        checked={true}
        className="sc-sQjNv cMpzOu"
        id="button-switch-1"
        onChange={[Function]}
        size="medium"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe bIZirg"
        size="medium"
      >
        <span
          className="sc-kLOYGq iQvQfY"
        >
          <p
            className="sc-jveewi gpoJqT"
          >
            Off
          </p>
          <p
            className="sc-jveewi gpoJqT"
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs wUHpr"
      disabled={false}
      size="large"
    >
      <input
        checked={true}
        className="sc-sQjNv cMpzOu"
        id="button-switch-2"
        onChange={[Function]}
        size="large"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe bIZirg"
        size="large"
      >
        <span
          className="sc-kLOYGq iQvQfY"
        >
          <p
            className="sc-jveewi gpoJqT"
          >
            Off
          </p>
          <p
            className="sc-jveewi gpoJqT"
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`Switch renders Disabled state 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs kTOiXU"
      disabled={true}
      size="small"
    >
      <input
        checked={true}
        className="sc-sQjNv cMpzOu"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe codXWL"
        size="small"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs kTOiXU"
      disabled={true}
      size="small"
    >
      <input
        checked={false}
        className="sc-sQjNv cMpzOu"
        id="test-switch-disabled"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-imZoBe iPejPr"
        size="small"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs dTSkmo"
      disabled={false}
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-sQjNv jMssVf"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe fdFkSl"
        size="twoxsmall"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs eFKEdn"
      disabled={false}
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-sQjNv liUDGr"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe jvSyUs"
        size="xsmall"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs enWIIi"
      disabled={false}
      size="small"
    >
      <input
        checked={true}
        className="sc-sQjNv liUDGr"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe jvSyUs"
        size="small"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs dTSkmo"
      disabled={false}
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-sQjNv cnevae"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe iltJZy"
        size="twoxsmall"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs eFKEdn"
      disabled={false}
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-sQjNv cMpzOu"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe codXWL"
        size="xsmall"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs enWIIi"
      disabled={false}
      size="small"
    >
      <input
        checked={true}
        className="sc-sQjNv cMpzOu"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe codXWL"
        size="small"
      />
    </label>
  </div>
</div>
`;
